# BaseAndroidFramework

./: .gitignore  README.md  build.gradle  build.gradle.kts  config.gradle  key.jks  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/therouter/: routeMap.json
app/src/main/java/pan/lib/baseandroidframework/: CustomApplication.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: strings.xml
common_lib/: build.gradle  build.gradle.kts  consumer-rules.pro  gradle.properties
common_lib/src/main/: AndroidManifest.xml
common_lib/src/main/java/pan/lib/common_lib/: BaseActivity.kt
common_lib/src/main/java/pan/lib/common_lib/data/: User.kt  (+2 more)
common_lib/src/main/res/anim/: popup_in.xml  popup_out.xml
common_lib/src/main/res/layout/: activity_base.xml
common_lib/src/main/res/values/: colors.xml  styles.xml
demo/: build.gradle  build.gradle.kts  consumer-rules.pro
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/example/: DemoWebsocketService.kt
demo/src/main/java/com/example/demo/: WanApiService.kt
demo/src/main/res/layout/: activity_example_net_work.xml  activity_top_article.xml  activity_websocket_demo.xml  item_top_article.xml
demo/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
image_loader/: build.gradle  consumer-rules.pro
image_loader/src/main/: AndroidManifest.xml
image_loader/src/main/java/pers/pan/imageloader/: ImageLoadOption.kt  ImageLoader.kt  ImageOption.kt  ImageStrategy.kt  LoadTypes.kt  RequestExecutor.kt  RequestManager.kt
login/: build.gradle
login/src/main/: AndroidManifest.xml
login/src/main/res/layout/: activity_login.xml
native_demo/: build.gradle
native_demo/src/main/cpp/: CMakeLists.txt  native_demo.cpp
native_demo/src/main/java/com/example/native_demo/: NativeLib.kt
test/: README.md  build.gradle
test/src/androidTest/java/com/example/test/: ExampleInstrumentedTest.kt
test/src/main/: AndroidManifest.xml
test/src/main/java/com/example/test/: TestApiService.kt
test/src/main/res/layout/: activity_example_net_work.xml
(+76 files in other folders)
